# lattice-exercise-twin

./: .gitignore  README.md  pyproject.toml
docs/: LATTICE_SANDBOX_SETUP.md  lattice-env.example
examples/: platoon-mesh-3node.yaml
examples/scenarios/ci-golden-mesh/: scenario.json
examples/scenarios/relay-death-t14/: scenario.json
lattice_exercise_twin/: __init__.py  cli.py  doctor.py  live.py  paths.py  plan.py  report.py  rules.py  run.py  schema.py  simulate.py  site_export.py
site/: app.js  data-loader.js  index.html  reviewer.js  runner.js  styles.css  vision.html  vision.js
site/data/: ci-golden-mesh.json  latest.json  relay-death-t14.json
site/demo/: blocked_exercise.html  blocked_receipt.html
site/run/: ci-golden-mesh.html  relay-death-t14.html
tests/: conftest.py  test_cli.py  test_doctor.py  test_live.py  test_plan.py  test_report.py  test_rules.py  test_simulate.py  test_site_export.py
