[project]
name = "lattice-exercise-twin"
version = "0.1.0"
description = "Plan, run, doctor, and report Lattice mesh exercise fate — entity/task failure before live fly."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Abhishek Enaguthi" }]
dependencies = ["numpy>=1.24", "pyyaml>=6.0"]

[project.optional-dependencies]
live = ["anduril-lattice-sdk>=4.0"]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.scripts]
lattice-exercise-twin = "lattice_exercise_twin.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lattice_exercise_twin"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
